# docs/swagger.yaml
@@ -71,8 +71,8 @@ definitions:
       service_flow_limit:
         type: integer
       service_name:
-        description: Id                     int64  `json:"id" form:"id" comment:"Service
-          id" example:"56" validate:"required"`
+        description: ID            int64  `json:"id" form:"id" comment:"Service id"
+          example:"56" validate:"required,min=1"`
         type: string
       upstream_connect_time_out:
         type: integer
@@ -122,6 +122,65 @@ definitions:
         type: array
       total:
         type: integer
+    type: object
+  io.ServiceUpdateHTTPInput:
+    properties:
+      black_list:
+        type: string
+      client_ip_flow_limit:
+        type: integer
+      head_transform:
+        type: string
+      id:
+        example: 56
+        type: integer
+      ip_list:
+        example: 127.0.0.1:80
+        type: string
+      need_https:
+        type: integer
+      need_strip_uri:
+        type: integer
+      need_websocket:
+        type: integer
+      open_auth:
+        type: integer
+      round_type:
+        type: integer
+      rule:
+        type: string
+      rule_type:
+        type: integer
+      service_desc:
+        example: test_add_http
+        type: string
+      service_flow_limit:
+        type: integer
+      service_name:
+        example: test_add_http
+        type: string
+      upstream_connect_time_out:
+        type: integer
+      upstream_header_time_out:
+        type: integer
+      upstream_idle_time_out:
+        type: integer
+      upstream_max_idle:
+        type: integer
+      url_rewrite:
+        type: string
+      weight_list:
+        example: "50"
+        type: string
+      white_list:
+        type: string
+    required:
+    - id
+    - ip_list
+    - rule
+    - service_desc
+    - service_name
+    - weight_list
     type: object
   middleware.Response:
     properties:
@@ -326,6 +385,34 @@ paths:
                   $ref: '#/definitions/io.ServiceListOutput'
               type: object
       summary: Service list
+      tags:
+      - Service Management
+  /service/service_update_http:
+    post:
+      consumes:
+      - application/json
+      description: Update HTTP service
+      operationId: /service/service_update_http
+      parameters:
+      - description: body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/io.ServiceUpdateHTTPInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: Update HTTP service
       tags:
       - Service Management
 swagger: "2.0"
